[gd_scene load_steps=4 format=2]

[ext_resource path="res://MapObjects/CheckpointTrigger.gd" type="Script" id=2]
[ext_resource path="res://MapObjects/LapTimer.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 2, 1 )

[node name="CheckpointTrigger" type="Spatial"]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9201, 0 )
shape = SubResource( 1 )

[node name="LapTimer" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
